No error message for invalid config in mixed version replset

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.8.0-rc1
    • Affects Version/s: None
    • Component/s: Replication
    • None
    • Minor Change
    • ALL
    • Hide

      Start up a replica set in version 2.4, with this config:

      {
      	"_id" : "config-test",
      	"version" : 2,
      	"members" : [
      		{
      			"_id" : 0,
      			"host" : "charlie-macbook-pro:41000"
      		},
      		{
      			"_id" : 1,
      			"host" : "charlie-macbook-pro:41001",
      			"votes" : 2
      		}
      	]
      }
      

      then re-config to add a 2.8 node, resulting in this config:

      {
      	"_id" : "config-test",
      	"version" : 3,
      	"members" : [
      		{
      			"_id" : 0,
      			"host" : "charlie-macbook-pro:41000"
      		},
      		{
      			"_id" : 1,
      			"host" : "charlie-macbook-pro:41001",
      			"votes" : 2
      		},
      		{
      			"_id" : 2,
      			"host" : "charlie-macbook-pro:41002"
      		}
      	]
      }
      

      The 2.8 host remains in 'STARTUP' mode, but without any error messages besides the one mentioned below.

      Show
      Start up a replica set in version 2.4, with this config: { "_id" : "config-test", "version" : 2, "members" : [ { "_id" : 0, "host" : "charlie-macbook-pro:41000" }, { "_id" : 1, "host" : "charlie-macbook-pro:41001", "votes" : 2 } ] } then re-config to add a 2.8 node, resulting in this config: { "_id" : "config-test", "version" : 3, "members" : [ { "_id" : 0, "host" : "charlie-macbook-pro:41000" }, { "_id" : 1, "host" : "charlie-macbook-pro:41001", "votes" : 2 }, { "_id" : 2, "host" : "charlie-macbook-pro:41002" } ] } The 2.8 host remains in 'STARTUP' mode, but without any error messages besides the one mentioned below.
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When there is an invalid config for a replica set in version 2.4, when a 2.8 member is added, the 2.8 member simply logs

      2014-11-11T09:57:11.015-0500 I REPLSETS [rsSync] replSet warning did not receive a valid config yet, sleeping 5 seconds
      

      Over and over again, without any error message.

      Confirmed that the same thing happens when mixing 2.6 and 2.8. So it's not specific to 2.4.

            Assignee:
            Spencer Brody (Inactive)
            Reporter:
            Charlie Swanson
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: