SERVER-16079 Invalid number of votes is a validation error not a parse error