src/mongo/db/repl/member_config_test.cpp
@@ -157,9 +157,8 @@ namespace {
         ASSERT_OK(mc.initialize(BSON("_id" << 0 << "host" << "h" << "votes" << -0.5),
                                 &tagConfig));
         ASSERT_FALSE(mc.isVoter());
-        ASSERT_EQUALS(ErrorCodes::BadValue,
-                      mc.initialize(BSON("_id" << 0 << "host" << "h" << "votes" << 2),
-                                    &tagConfig));
+        ASSERT_OK(mc.initialize(BSON("_id" << 0 << "host" << "h" << "votes" << 2),
+                                &tagConfig));
 
         ASSERT_EQUALS(ErrorCodes::TypeMismatch,
                       mc.initialize(BSON("_id" << 0 << "host" << "h" << "votes" << Date_t(2)),
@@ -217,6 +216,46 @@ namespace {
                                 &tagConfig));
         ASSERT_EQUALS(ErrorCodes::BadValue, mc.validate());
         ASSERT_OK(mc.initialize(BSON("_id" << 256 << "host" << "localhost:12345"),
+                                &tagConfig));
+        ASSERT_EQUALS(ErrorCodes::BadValue, mc.validate());
+    }
+
+    TEST(MemberConfig, ValidateVotes) {
+        ReplicaSetTagConfig tagConfig;
+        MemberConfig mc;
+
+        ASSERT_OK(mc.initialize(BSON("_id" << 0 << "host" << "h" << "votes" << 1.0),
+                                &tagConfig));
+        ASSERT_OK(mc.validate());
+        ASSERT_TRUE(mc.isVoter());
+
+        ASSERT_OK(mc.initialize(BSON("_id" << 0 << "host" << "h" << "votes" << 0),
+                                &tagConfig));
+        ASSERT_OK(mc.validate());
+        ASSERT_FALSE(mc.isVoter());
+
+        // For backwards compatibility, truncate 1.X to 1, and 0.X to 0 (and -0.X to 0).
+        ASSERT_OK(mc.initialize(BSON("_id" << 0 << "host" << "h" << "votes" << 1.5),
+                                &tagConfig));
+        ASSERT_OK(mc.validate());
+        ASSERT_TRUE(mc.isVoter());
+
+        ASSERT_OK(mc.initialize(BSON("_id" << 0 << "host" << "h" << "votes" << 0.5),
+                                &tagConfig));
+        ASSERT_OK(mc.validate());
+        ASSERT_FALSE(mc.isVoter());
+
+        ASSERT_OK(mc.initialize(BSON("_id" << 0 << "host" << "h" << "votes" << -0.5),
+                                &tagConfig));
+        ASSERT_OK(mc.validate());
+        ASSERT_FALSE(mc.isVoter());
+
+        // Invalid values
+        ASSERT_OK(mc.initialize(BSON("_id" << 0 << "host" << "h" << "votes" << 2),
+                                &tagConfig));
+        ASSERT_EQUALS(ErrorCodes::BadValue, mc.validate());
+
+        ASSERT_OK(mc.initialize(BSON("_id" << 0 << "host" << "h" << "votes" << -1),
                                 &tagConfig));
         ASSERT_EQUALS(ErrorCodes::BadValue, mc.validate());
     }
